--- a/src/app/todos/row/row.component.css
+++ b/src/app/todos/row/row.component.css
@@ -15,7 +15,7 @@
 
 .content__todo__text_container {
   cursor: pointer;
-  padding: 12px;
+  padding: 5px;
   border-radius: 6px;
   width: 100%;
 }
@@ -23,7 +23,6 @@
 .content__todo__text_container:hover {
   background: #f9f9f9;
 }
-
 
 .categoryContainer {
   width: 100%;
@@ -61,22 +60,39 @@
   gap:4px;
 }
 
-.containerTodoTagItem {
-  width: 110px !important;
-  border-radius: 4px;
-  font-size: 12px;
-  padding: 1px 6px;
+.container-todo-tag {
   display: flex;
-  align-items: center;
   gap: 4px;
-  color: #fff;
-  margin-bottom: 3px;
+  margin-bottom:10px
 }
 
-.containerTodoTagIcon {
-  font-size: 17px;
-  margin-top: 4px;
+.container-todo-tag-item {
+  width: 100px !important;
+  border-radius: 4px;
+  font-size: 12px;
+  padding: 0px 6px;
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  color: #fff;
+  margin-bottom: 2px;
+  margin-top: 3px;
 }
+
+.container-todo-tag-icon {
+  font-size: 14px;
+  margin-top: 8px;
+  max-width: 40px;
+}
+
+.container-todo-tag-item span {
+  font-size: 12px;
+}
+
+.container-todo-tag-item .mat-icon {
+  height:20px
+}
+
 
 .cardButton {
   background: var(--primary-color);
